force-app/main/default/objects/Invoice/fields/COMM_CreditMemoSAP_Date__c.field-meta.xml
<CustomField>
    <fullName>COMM_CreditMemoSAP_Date__c</fullName>
    <description>Used to store the date that Credit memo was created in edit invoice</description>
    <label>Credit Memo Date</label>
    <type>Date</type>
</CustomField>