force-app/main/default/objects/Invoice/fields/COMM_CreditMemoSAPId__c.field-meta.xml
<CustomField>
    <fullName>COMM_CreditMemoSAPId__c</fullName>
    <label>COMM_CreditMemoSAPId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>