force-app/main/default/objects/Invoice/fields/COMM_InvoiceEditCount__c.field-meta.xml
<CustomField>
    <fullName>COMM_InvoiceEditCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Invoice Edit Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>