force-app/main/default/objects/Invoice/fields/COMM_PreviousAddress__c.field-meta.xml
<CustomField>
    <fullName>COMM_PreviousAddress__c</fullName>
    <description>Used for Edit Invoice</description>
    <label>Previous Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>