force-app/main/default/objects/Invoice/fields/COMM_PreviousCity__c.field-meta.xml
<CustomField>
    <fullName>COMM_PreviousCity__c</fullName>
    <description>Used for Edit Invoice</description>
    <label>Previous City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>