force-app/main/default/objects/Invoice/fields/COMM_PreviousCountryCode__c.field-meta.xml
<CustomField>
    <fullName>COMM_PreviousCountryCode__c</fullName>
    <label>Previous Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>