force-app/main/default/objects/Invoice/fields/COMM_PreviousDocDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_PreviousDocDate__c</fullName>
    <description>Used in Invoice Edit</description>
    <label>Previous Doc Date</label>
    <type>DateTime</type>
</CustomField>