force-app/main/default/objects/Invoice/fields/COMM_PreviousFirstName__c.field-meta.xml
<CustomField>
    <fullName>COMM_PreviousFirstName__c</fullName>
    <description>Used for Edit Invoice</description>
    <label>Previous First Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>