force-app/main/default/objects/Invoice/fields/COMM_PreviousLastName__c.field-meta.xml
<CustomField>
    <fullName>COMM_PreviousLastName__c</fullName>
    <description>Used for Edit Invoice</description>
    <label>Previous Last Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>