force-app/main/default/objects/Invoice/fields/COMM_PreviousName__c.field-meta.xml
<CustomField>
    <fullName>COMM_PreviousName__c</fullName>
    <description>Used in Edit Invoice</description>
    <label>Previous Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>