force-app/main/default/objects/Invoice/fields/COMM_PreviousVATNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_PreviousVATNumber__c</fullName>
    <description>Used for Edit Invoice</description>
    <label>Previous VAT Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>