force-app/main/default/objects/Invoice/fields/COMM_PreviousZipCode__c.field-meta.xml
<CustomField>
    <fullName>COMM_PreviousZipCode__c</fullName>
    <description>Used for Edit Invoice</description>
    <label>Previous Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>