force-app/main/default/objects/Invoice/fields/COMM_SAPDocumentId2__c.field-meta.xml
<CustomField>
    <fullName>COMM_SAPDocumentId2__c</fullName>
    <label>COMM_SAPDocumentId2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>