force-app/main/default/objects/Invoice/fields/COMM_SAPIntegrationDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_SAPIntegrationDate__c</fullName>
    <description>Last integration attempt date time</description>
    <label>SAP Integration Date</label>
    <type>DateTime</type>
</CustomField>